nexus-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    template: openshift-nexus-deployment
  name: openshift-nexus
spec:
  host: nexus-fresh.appa4.tsi-af.de
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEFzCCAv+gAwIBAgIJALK1iUpF2VQLMA0GCSqGSIb3DQEBBQUAMIGhMQswCQYD
[...]
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDIjCCAgqgAwIBAgIBATANBgkqhkiG9w0BAQUFADCBoTELMAkGA1UEBhMCVVMx
[...]
      +Dzv5hqgSfvMG392KWh5f8xXfJNs4W5KLbZyl901MeReiLrPH3w=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBAMrvgu6ZTTefNN7j
[...]
      TcFT4touIo7oriFJ
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: openshift-nexus
status: {}
